tests/semantic/union_types/union_types.err
Warning: No rules/facts defined for relation D in file union_types.dl at line 18
.decl D (i:three)
------^-----------
Error: Atoms argument type is not a subtype of its declared type in file union_types.dl at line 33
G(X) :- E(X). // error
--^--------------------
Error: Atoms argument type is not a subtype of its declared type in file union_types.dl at line 36
E(X) :- F(X), !A(X), !B(X). // error.
-----------------^--------------------
Error: Atoms argument type is not a subtype of its declared type in file union_types.dl at line 36
E(X) :- F(X), !A(X), !B(X). // error.
------------------------^-------------
Error: Unable to deduce type for variable X in file union_types.dl at line 37
E(X) :- F(X), A(X), B(X). // error
--^--------------------------------
Error: Unable to deduce type for variable X in file union_types.dl at line 37
E(X) :- F(X), A(X), B(X). // error
----------^------------------------
Error: Unable to deduce type for variable X in file union_types.dl at line 37
E(X) :- F(X), A(X), B(X). // error
----------------^------------------
Error: Unable to deduce type for variable X in file union_types.dl at line 37
E(X) :- F(X), A(X), B(X). // error
----------------------^------------
Error: Unable to deduce type for variable X in file union_types.dl at line 39
C(X) :- D(X), !A(X). // error
--^---------------------------
Error: Unable to deduce type for variable X in file union_types.dl at line 39
C(X) :- D(X), !A(X). // error
----------^-------------------
Error: Unable to deduce type for variable X in file union_types.dl at line 39
C(X) :- D(X), !A(X). // error
-----------------^------------
10 errors generated, evaluation aborted
